fix css page overflow-y

--- a/frontend/src/app/page/page.component.scss
+++ b/frontend/src/app/page/page.component.scss
@@ -4,7 +4,7 @@
   padding: 0;
   position: relative;
   min-height: 100vh;
-  width: calc(100vw - 17em);
+  width: calc(100vw - 19em);
   margin-left: 17em;
   padding: 1em 5em;
   box-sizing: border-box;
